Fix for missing padding in email form

--- a/themes/hydrogen/joomla/scss/hydrogen-joomla/_forms.scss
+++ b/themes/hydrogen/joomla/scss/hydrogen-joomla/_forms.scss
@@ -50,3 +50,11 @@ input[type="color"],
 	}
 }
 
+// Mailto Window
+.view-mailto {
+    padding: 0 $leading-margin;
+    #g-page-surround {
+        box-shadow: none;
+    }
+}
+
